<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>awviz_plugin</name>
  <version>0.0.1</version>
  <description>Several built-in plugins for awviz to cover the basic functionality.</description>
  <maintainer email="kotaro.uetake@tier4.jp">ktro2828</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>awviz_common</depend>
  <depend>cv_bridge</depend>
  <depend>pluginlib</depend>
  <depend>rerun_sdk</depend>
  <depend>sensor_msgs</depend>
  <depend>autoware_perception_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
